k8s/overlays/aws/api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-api
  namespace: eve
spec:
  template:
    spec:
      containers:
        - name: api
          image: public.ecr.aws/w7c4v0w3/eve-horizon/api:0.1.132
