k8s/overlays/aws/orchestrator-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-orchestrator
  namespace: eve
spec:
  template:
    spec:
      containers:
        - name: orchestrator
          image: public.ecr.aws/w7c4v0w3/eve-horizon/orchestrator:staging
