k8s/overlays/aws/worker-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-worker
  namespace: eve
spec:
  template:
    spec:
      containers:
        - name: worker
          image: public.ecr.aws/w7c4v0w3/eve-horizon/worker:0.1.132
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 30
